# Gcs_Search_Macro

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  WORKFLOW_DIAGRAM.md  pyproject.toml  requirements.txt
deploy/: README.md  cloudrun-api.yaml  cloudrun-worker.yaml
src/gcs_search_macro_v4/: __init__.py  api.py  auth.py  cache.py  copying.py  emailer.py  enrichment.py  executor.py  jobs.py  models.py  policy.py  queueing.py  reporting.py  reports.py  search_engine.py  services.py  settings.py  worker.py
src/gcs_search_macro_v4/static/: index.html
