[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcs-search-macro-v4"
version = "4.1.0"
description = "Secure, queued Cloud Run service for GCS Search Macro"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "google-auth>=2.0",
    "google-cloud-firestore>=2.16",
    "google-cloud-bigquery>=3.0",
    "google-cloud-storage>=2.0",
    "google-cloud-tasks>=2.16",
    "pandas>=2.2,<4",
    "openpyxl>=3.1,<4",
    "db-dtypes>=1.2,<2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gcs_search_macro_v4" = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
